--- a/stylesheet.css
+++ b/stylesheet.css
@@ -40,7 +40,7 @@ p{
  font-size:15px;
  padding-bottom:30px;
  text-align:center;
- font-family: 'Yu Mincho Light','YuMincho','Yu Mincho','游明朝体',sans-serif;
+ font-family: 'Yu Mincho Light','YuMincho','Yu Mincho','游明朝体',serif;
 }
 
 @media(max-width:670px){
